--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,9 +11,17 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Welcome to</h1>
-    <h1><span class="colorheader">Coder Shamim</span> World!</h1>
-    <h3>Meet Your web Expert</h3>
-    <p>I’m Shamim Hasan. I’m a designer who codes. I’ve worked internationally, in-house, and remotely on projects for leading brands, agencies, startups, and charities. I care deeply about creating world-class, useful, and beautiful products that help people and make a difference. I can be as involved in your project as you need me to be; from the seed of the idea, to sketches, creative direction, design, copywriting, system design, and even the front-end and WordPress build.</p>
+   <section>
+    <div>
+        <h1>Welcome to</h1>
+        <h1><span class="colorheader">Coder Shamim</span> World!</h1>
+        <h3>Meet Your web Expert</h3>
+        <p>I’m Shamim Hasan. I’m a designer who codes. I’ve worked internationally, in-house, and remotely on projects for leading brands, agencies, startups, and charities. I care deeply about creating world-class, useful, and beautiful products that help people and make a difference. I can be as involved in your project as you need me to be; from the seed of the idea, to sketches, creative direction, design, copywriting, system design, and even the front-end and WordPress build.</p>
+        </body>
+        </div>
+        <div>
+            <img class="image" src="images/shamim..jpg" alt="image of shamim">
+        </div>
+   </section>
 </body>
 </html>
