--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
 </head>
 <body>
    <section>
-    <div>
+    <div class="half-width">
         <h1>Welcome to</h1>
         <h1><span class="colorheader">Coder Shamim</span> World!</h1>
         <h3>Meet Your web Expert</h3>
         <p>I’m Shamim Hasan. I’m a designer who codes. I’ve worked internationally, in-house, and remotely on projects for leading brands, agencies, startups, and charities. I care deeply about creating world-class, useful, and beautiful products that help people and make a difference. I can be as involved in your project as you need me to be; from the seed of the idea, to sketches, creative direction, design, copywriting, system design, and even the front-end and WordPress build.</p>
-        </body>
+       <a class="link-button" target="_blank" href="https://www.linkedin.com/in/shamim-hasan-7256801b5/">Hire Me</a>
         </div>
-        <div>
+        <div class="half-width">
             <img class="image" src="images/shamim..jpg" alt="image of shamim">
         </div>
    </section>
