--- a/index.html
+++ b/index.html
@@ -20,8 +20,25 @@
        <a class="link-button" target="_blank" href="https://www.linkedin.com/in/shamim-hasan-7256801b5/">Hire Me</a>
         </div>
         <div class="half-width">
-            <img class="image" src="images/shamim..jpg" alt="image of shamim">
+            <img class="image" src="images/jhankar.png" alt="image of shamim">
         </div>
+   </section>
+   <section class="dream-big">
+       <div class="half-width">
+           <img src="images/jhankar2.png" alt="">
+
+       </div>
+       <div class="half-width">
+           <h1>
+               Dream Big
+           </h1>
+           <h2>
+               Become a Web Developer
+           </h2>
+           <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how to make simple website. My goal is to build 3 websites and learn advanced topics.</p>
+           <a class="link-button" target="_blank" href="#">Download Resume</a>
+
+       </div>
    </section>
 </body>
 </html>
