--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
        <a class="link-button" target="_blank" href="https://www.linkedin.com/in/shamim-hasan-7256801b5/">Hire Me</a>
         </div>
         <div class="half-width">
-            <img class="image" src="images/jhankar.png" alt="image of shamim">
+            <img class="image" src="images/shamim..jpg" alt="image of shamim">
         </div>
    </section>
    <section class="dream-big flexible-container">
